Passage page accueil en CSS

--- a/CSS/Styles.scss
+++ b/CSS/Styles.scss
@@ -147,10 +147,22 @@ input:focus
 }
 /*Restaurant*/
 #restaurant{
-    margin-left:10px;
-    margin-right: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-color: #F6F6F6;
+    padding-top: 40px;
+    padding-bottom:50px;
+    .restaurant__title{
+        margin-left:10px;
+    }
     .restaurant-card__container{
+        margin:0px 10px 0px 10px;
         border-radius: 15px;
+        height: 270px;
+        margin-bottom:15px;
+        box-shadow: 1px 1px 10px grey;
+        background-color: white;
         a{
             text-decoration: none;
             color:black;
@@ -160,20 +172,60 @@ input:focus
                 object-fit: cover;
                 border-radius: 15px 15px 0px 0px;
             }
-            .restaurant__title{
-                display: flex;
-            }
-            .restaurant__location{
-
-            }
-            .fa-heart
-             {
-                width:25px;
-                height:25px;
-             }
-
-
-        
+            .restaurant__text{
+                margin-left:10px;
+                margin-right:15px;
+                padding-top:15px;
+                display:flex;
+                justify-content: space-between;
+                align-items: center;
+                .restaurant__title{
+                    font-size: 18px;
+                    margin:0;
+                }
+                .restaurant__location{
+                    font-size:17px;
+                    margin-top:2%;
+                }
+            
+                .fa-heart{
+                    font-size:25px;
+                    margin: 0px 5px 20px;
+                    
+                }
+            }     
         }
     }
+}
+
+footer{
+    background-color: #353535;
+    padding-top:15px;
+    padding-bottom: 10px;
+    .footer__title{
+        font-family: 'Shrikhand',cursive;
+        margin-left:10px;
+        color: #F6F6F6;
+        font-size:20px;
+        font-weight: 200;
+        margin-top:2%;
+        margin-left:5%;
+        margin-bottom: 0;
+    }
+    ul{
+        list-style-type: none;
+        pagging:0;
+        li{
+            margin-left: -5%;
+            margin-bottom: 3%;
+            font-size:15px;
+            font-weight: 500;
+            color:#F6F6F6;
+            .fa-solid{
+                font-size:13px;
+                margin-right: 8px;
+            }
+        }
+    }
+
 }
