--- a/CSS/Styles.scss
+++ b/CSS/Styles.scss
@@ -2,6 +2,7 @@
 $color-primary: #9356DC;
 $color-secondary: #FF79DA;
 $color-tertiary: #99E2D0;
+/*extensions*/
 .title-typography
 {
     font-family: 'Shrikhand', cursive;
@@ -11,6 +12,28 @@ $color-tertiary: #99E2D0;
 {
     font-family: 'Roboto', sans-serif;
     color:black;
+}
+.border-title__meal{
+    content:"_";
+    border-bottom: solid 3px $color-tertiary;
+    display: block;
+    width:40px;
+    color: transparent;
+    margin-top:-15px;
+}
+.button-omf
+{
+    width:60%;
+    padding:15px 5px 15px 5px;
+    font-size:16px;
+    align-content: center;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 100px;
+    border:none;
+    color:white;
+    background-image: linear-gradient(to right bottom,$color-secondary,$color-primary);
+    box-shadow: 1px 2px 10px grey;
 }
 /*body*/
 *
@@ -97,17 +120,7 @@ input:focus
             font-weight:lighter;
         }
         .button--purple{
-            width:60%;
-            padding:15px 5px 15px 5px;
-            font-size:16px;
-            align-content: center;
-            margin-left: auto;
-            margin-right: auto;
-            border-radius: 100px;
-            border:none;
-            color:white;
-            background-image: linear-gradient(to right bottom,$color-secondary,$color-primary);
-            box-shadow: 1px 2px 10px grey;
+           @extend .button-omf;
         }
 }
 /*fonctionnement*/
@@ -214,7 +227,6 @@ footer{
     }
     ul{
         list-style-type: none;
-        pagging:0;
         li{
             margin-left: -5%;
             margin-bottom: 3%;
@@ -229,3 +241,103 @@ footer{
     }
 
 }
+/*menu */
+header{
+    display:flex;
+    align-items: center;
+    margin: 10px 80px 0px 20px;
+    a{
+        color:black;
+        margin:30px -40px 10px 0px;
+    }
+    .fa-arrow-left{
+        font-size: 20px;
+    }
+}
+/* haut de la carte menu*/
+#menu-card{
+    background-color:#F6F6F6;
+    display: flex;
+    flex-direction: column;
+    .menu-card__image{
+        width: 100%;
+        object-fit: cover;
+        margin-bottom:-10px;
+    }
+    .menu-card__top{
+       padding-top: 25px;
+       margin-top:-30px;
+       background-color: #F6F6F6;
+       border-radius: 40px;
+        .menu-card__title{
+            @extend .title-typography;
+            font-size:28px;
+            font-weight: 400;
+            margin-left: 20px;
+            margin-top:5px;
+            }
+            .fa-regular{
+                margin-left:6%;
+            }
+    }
+}
+/*entrées*/
+
+.entrance,.dish,.dessert{
+    margin:0px 10px 20px 8px;
+
+
+.meal__title{
+    text-transform: uppercase;
+    font-weight: 200;
+    font-size:15px;
+    margin-left:2px;
+    }
+    .meal__title::after{
+        @extend .border-title__meal;
+    }
+    .card-meal{
+        background-color: #FFFFFF;
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 10px;
+        height: 70px;
+        width: 100%;
+        border-radius: 15px;
+        .card-meal__name{
+            font-weight: 700;
+            font-size: 17px;
+            margin-bottom:-10px;
+            margin-left:10px;
+            margin-top: 15px;
+            width: 260px;
+            height: 20px;
+            white-space: nowrap;
+        }
+        .card-meal__desc{
+            margin-left:10px;
+            width: 270px;
+            height: 20px;
+            font-size: 14px;
+            font-weight: 100;
+            text-overflow:ellipsis;
+            white-space: nowrap;
+            overflow: hidden;
+            
+        }
+        .card-meal__price{
+            margin:-35px 80px 50px 295px;
+            font-weight: 700;
+            font-size:15px;
+        }  
+    }
+}
+
+.button--purple__meal{
+    @extend .button-omf;
+    display: block;
+    width: 190px;
+    margin-top: 45px;
+    margin-bottom:40px;
+}
+
