--- a/Sass/Components/_buttons.scss
+++ b/Sass/Components/_buttons.scss
@@ -14,6 +14,7 @@
   
 &:hover{
         @include border-hover;
+        @include light-color;
     }
 &:active{
         box-shadow: inset -1px -2px 10px rgba(255, 255, 255, .6),
