--- a/Sass/Pages/_card-menu.scss
+++ b/Sass/Pages/_card-menu.scss
@@ -22,39 +22,83 @@
         height: 70px;
         width: 100%;
         border-radius: 15px;
-        box-shadow: 2px 2px 10px rgba(128,128,128,0.2);
-        @media(min-width:992px){
+        box-shadow: 2px 2px 10px rgba(128,128,128,0.2);   
         
-        }
-        .card-meal__name{
+       
+        &__name{
             font-weight: 700;
             font-size: 17px;
             margin-bottom:-10px;
             margin-left:10px;
             margin-top: 15px;
-            width: 260px;
+            width: 90%;
             height: 20px;
             white-space: nowrap;
+            text-overflow: ellipsis;
+            overflow: hidden;
         }
-        .card-meal__desc{
+        &__overflow-text{
+            align-items: baseline;
+        }
+        &__desc{
             margin-left:10px;
-            width: 80%;
             height: 20px;
+            width: 80%;
             font-size: 14px;
             font-weight: 100;
             text-overflow:ellipsis;
             white-space: nowrap;
             overflow: hidden;
-            
         }
-        .card-meal__price{
-            margin:-35px 0px 50px 0px;
+        &__price{
+            margin:-35px 25px 50px 20px;
             font-weight: 700;
-            font-size:15px;
-            width: 95%;
-            text-align:right;
-           
+            font-size: 15px;
+            text-align: right;
+            display: block;
+            overflow: hidden;
         }  
+        &__animation{
+            width: 0%;
+            height:70px;
+            margin: -105px 0% 0px 83%;
+            border-radius: 0px 15px 15px 0px;
+            background-color: $color-tertiary;
+            display: flex;
+            transition: 0.5s;
+            .icon{
+                color:transparent;
+                font-size:20px;
+                font-weight: bold;
+                padding:25px 0px 25px 20px;
+                
+               
+            }
+        }
+        &:hover{
+            cursor: pointer;
+            .card-meal__animation{
+                transition: 0.6s;
+                width: 17%;
+                .icon{
+                    color: white;
+                    animation: rotateCheck 0.5s both;
+                    transition: all 1s ease;
+                } 
+            }
+            .card-meal__price{
+                margin-right:25%;
+                transition: 0.5s;
+            }
+            .card-meal__desc{
+                width:60%;
+                transition: 0.5s;
+            }
+            .card-meal__name{
+                width: 75%;
+                transition: 0.4s;
+            }
+        }
     }
 }
 @media(min-width:992px){
