--- a/Sass/Bases/_Bases.scss
+++ b/Sass/Bases/_Bases.scss
@@ -1,9 +1,8 @@
 /*body*/
 *
 {
-    box-sizing: border-box;
+    box-sizing: border-box; 
 }
-
 body
 {
     @extend .text-typography;
@@ -11,4 +10,64 @@ body
     overflow-x:hidden;
     width: 100%;
     margin: 0;
+}
+   
+.loader{
+    position: fixed;
+    height: 100vh;
+    width:0%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    inset:0;
+    z-index: 1;
+    opacity:0.9;
+    transition: 0.2s ease-in-out;
+    animation: bg-load 4s;
+    .letter{
+        font-size: 50px;
+        font-family: 'Shrikhand', cursive;
+        color:transparent;
+        align-items: flex-start;
+        justify-content: center;
+        animation: loading 3s ease-out;
+        transition: color 0.2s ease-out;
+        @media(min-width:768px){
+            font-size: 80px;
+        }
+        &:nth-child(1){
+            animation-delay: 0.1s;
+        }
+        &:nth-child(2){
+            animation-delay: 0.2s;
+        }
+        &:nth-child(3){
+            animation-delay: 0.3s;
+        }
+        &:nth-child(4){
+            animation-delay: 0.4s;
+        }
+        &:nth-child(5){
+            animation-delay: 0.5s;
+        }
+        &:nth-child(6){
+            animation-delay: 0.6s;
+        }
+        &:nth-child(7){
+            animation-delay: 0.7s;
+        }
+        &:nth-child(8){
+            animation-delay: 0.8s;
+        } 
+        &:nth-child(9){
+            animation-delay: 0.9s;
+        } 
+        &:nth-child(10){
+            animation-delay: 1s;
+        } 
+        &:nth-child(11){
+            animation-delay: 1.1s;
+        } 
+    }
+    
 }
