--- a/Sass/Layout/_footer.scss
+++ b/Sass/Layout/_footer.scss
@@ -33,6 +33,21 @@ footer{
                 font-size:13px;
                 margin-right: 8px;
             }
+            a{
+                text-decoration: none;
+                color: white;
+                &:hover{
+                    color:$color-primary;
+                    
+                }
+            }
+            &:hover{
+                font-size: 16px;      
+                color: $color-primary;
+                cursor: pointer;
+                transition: 0.3s;
+            }
+
         }
     }
 }
