--- a/Sass/Layout/_restaurant-id.scss
+++ b/Sass/Layout/_restaurant-id.scss
@@ -20,6 +20,11 @@
         margin-bottom:15px;
         box-shadow: 1px 1px 10px grey;
         background-color: white;
+        &:hover{
+           margin: 10px 5px 10px 5px;
+           transition: 0.3s;
+           box-shadow:3px 3px 12px grey;
+        }
         @media (min-width:768px){
             width:70%;
             margin-right: auto;
