--- a/Sass/Pages/_card-menu.scss
+++ b/Sass/Pages/_card-menu.scss
@@ -69,7 +69,7 @@
                 color:transparent;
                 font-size:22px;
                 font-weight: bold;
-                padding:25px;
+                padding: 25px 15px 0px 15px;
             }
         }
         &:hover{
