--- a/Sass/Bases/_Animations.scss
+++ b/Sass/Bases/_Animations.scss
@@ -23,28 +23,28 @@
 }
 
 .entrance,.dish,.dessert{
-    .card-meal{
-        transition: transform 500ms ease;
+   .card-meal{
+        transition: transform 1000ms ease;
         animation-iteration-count: 1;
     }
     .child--1{
-        animation: cascadeMenu1 500ms both;
+        animation: cascadeMenu1 750ms both 0s;
         animation-iteration-count: 1;
     }
     .child--2{
-        animation: cascadeMenu2 750ms both;
+        animation: cascadeMenu2 1000ms both 0.1s;
         animation-iteration-count: 1;
     }
     .child--3{
-        animation: cascadeMenu3 1000ms both;
+        animation: cascadeMenu3 1250ms both 0.2s;
         animation-iteration-count: 1;
     }
     .child--4{
-        animation: cascadeMenu4 1250ms both;
+        animation: cascadeMenu4 1500ms both 0.3s;
         animation-iteration-count: 1;
-
     }
 }
+
 
 @keyframes  cascadeMenu1 { 
     0% { transform: translateY(30px); opacity:0%};
@@ -88,13 +88,10 @@
 }
 @keyframes bg-load{
     0%{
-        
-        background-color: black;
-        width:100%;
+        @include background-load;
     }
     100%{
-        background-color: black;
-        width:100%;
-        
+        @include background-load;
     }
 }
+
