--- a/Sass/Bases/_Bases.scss
+++ b/Sass/Bases/_Bases.scss
@@ -3,6 +3,7 @@
 {
     box-sizing: border-box; 
 }
+
 body
 {
     @extend .text-typography;
@@ -12,6 +13,7 @@ body
     margin: 0;
 }
    
+/*chargement*/
 .loader{
     position: fixed;
     height: 100vh;
@@ -25,49 +27,24 @@ body
     transition: 0.2s ease-in-out;
     animation: bg-load 4s;
     .letter{
-        font-size: 50px;
         font-family: 'Shrikhand', cursive;
         color:transparent;
         align-items: flex-start;
         justify-content: center;
         animation: loading 3s ease-out;
         transition: color 0.2s ease-out;
+       
         @media(min-width:768px){
             font-size: 80px;
         }
-        &:nth-child(1){
-            animation-delay: 0.1s;
-        }
-        &:nth-child(2){
-            animation-delay: 0.2s;
-        }
-        &:nth-child(3){
-            animation-delay: 0.3s;
-        }
-        &:nth-child(4){
-            animation-delay: 0.4s;
-        }
-        &:nth-child(5){
-            animation-delay: 0.5s;
-        }
-        &:nth-child(6){
-            animation-delay: 0.6s;
-        }
-        &:nth-child(7){
-            animation-delay: 0.7s;
-        }
-        &:nth-child(8){
-            animation-delay: 0.8s;
-        } 
-        &:nth-child(9){
-            animation-delay: 0.9s;
-        } 
-        &:nth-child(10){
-            animation-delay: 1s;
-        } 
-        &:nth-child(11){
-            animation-delay: 1.1s;
-        } 
     }
-    
 }
+/*boucle chargement*/
+@for $i from 1 through 11 {
+    .letter:nth-child(11n + #{$i}) {
+      animation-delay: 0s + $i * 0.1s;
+    }
+  }
+
+
+  
