--- a/Sass/Styles.css
+++ b/Sass/Styles.css
@@ -21,6 +21,61 @@ input:-ms-input-placeholder {
   color: black;
 }
 
+.letter:nth-child(11n+1) {
+  -webkit-animation-delay: 0.1s;
+          animation-delay: 0.1s;
+}
+
+.letter:nth-child(11n+2) {
+  -webkit-animation-delay: 0.2s;
+          animation-delay: 0.2s;
+}
+
+.letter:nth-child(11n+3) {
+  -webkit-animation-delay: 0.3s;
+          animation-delay: 0.3s;
+}
+
+.letter:nth-child(11n+4) {
+  -webkit-animation-delay: 0.4s;
+          animation-delay: 0.4s;
+}
+
+.letter:nth-child(11n+5) {
+  -webkit-animation-delay: 0.5s;
+          animation-delay: 0.5s;
+}
+
+.letter:nth-child(11n+6) {
+  -webkit-animation-delay: 0.6s;
+          animation-delay: 0.6s;
+}
+
+.letter:nth-child(11n+7) {
+  -webkit-animation-delay: 0.7s;
+          animation-delay: 0.7s;
+}
+
+.letter:nth-child(11n+8) {
+  -webkit-animation-delay: 0.8s;
+          animation-delay: 0.8s;
+}
+
+.letter:nth-child(11n+9) {
+  -webkit-animation-delay: 0.9s;
+          animation-delay: 0.9s;
+}
+
+.letter:nth-child(11n+10) {
+  -webkit-animation-delay: 1s;
+          animation-delay: 1s;
+}
+
+.letter:nth-child(11n+11) {
+  -webkit-animation-delay: 1.1s;
+          animation-delay: 1.1s;
+}
+
 /*body*/
 * {
   box-sizing: border-box;
@@ -32,6 +87,7 @@ body {
   margin: 0;
 }
 
+/*chargement*/
 .loader {
   position: fixed;
   height: 100vh;
@@ -47,7 +103,6 @@ body {
           animation: bg-load 4s;
 }
 .loader .letter {
-  font-size: 50px;
   font-family: "Shrikhand", cursive;
   color: transparent;
   align-items: flex-start;
@@ -61,47 +116,59 @@ body {
     font-size: 80px;
   }
 }
-.loader .letter:nth-child(1) {
+
+/*boucle chargement*/
+.letter:nth-child(11n+1) {
   -webkit-animation-delay: 0.1s;
           animation-delay: 0.1s;
 }
-.loader .letter:nth-child(2) {
+
+.letter:nth-child(11n+2) {
   -webkit-animation-delay: 0.2s;
           animation-delay: 0.2s;
 }
-.loader .letter:nth-child(3) {
+
+.letter:nth-child(11n+3) {
   -webkit-animation-delay: 0.3s;
           animation-delay: 0.3s;
 }
-.loader .letter:nth-child(4) {
+
+.letter:nth-child(11n+4) {
   -webkit-animation-delay: 0.4s;
           animation-delay: 0.4s;
 }
-.loader .letter:nth-child(5) {
+
+.letter:nth-child(11n+5) {
   -webkit-animation-delay: 0.5s;
           animation-delay: 0.5s;
 }
-.loader .letter:nth-child(6) {
+
+.letter:nth-child(11n+6) {
   -webkit-animation-delay: 0.6s;
           animation-delay: 0.6s;
 }
-.loader .letter:nth-child(7) {
+
+.letter:nth-child(11n+7) {
   -webkit-animation-delay: 0.7s;
           animation-delay: 0.7s;
 }
-.loader .letter:nth-child(8) {
+
+.letter:nth-child(11n+8) {
   -webkit-animation-delay: 0.8s;
           animation-delay: 0.8s;
 }
-.loader .letter:nth-child(9) {
+
+.letter:nth-child(11n+9) {
   -webkit-animation-delay: 0.9s;
           animation-delay: 0.9s;
 }
-.loader .letter:nth-child(10) {
+
+.letter:nth-child(11n+10) {
   -webkit-animation-delay: 1s;
           animation-delay: 1s;
 }
-.loader .letter:nth-child(11) {
+
+.letter:nth-child(11n+11) {
   -webkit-animation-delay: 1.1s;
           animation-delay: 1.1s;
 }
@@ -133,31 +200,31 @@ body {
 }
 
 .entrance .card-meal, .dish .card-meal, .dessert .card-meal {
-  transition: transform 500ms ease;
+  transition: transform 1000ms ease;
   -webkit-animation-iteration-count: 1;
           animation-iteration-count: 1;
 }
 .entrance .child--1, .dish .child--1, .dessert .child--1 {
-  -webkit-animation: cascadeMenu1 500ms both;
-          animation: cascadeMenu1 500ms both;
+  -webkit-animation: cascadeMenu1 750ms both 0s;
+          animation: cascadeMenu1 750ms both 0s;
   -webkit-animation-iteration-count: 1;
           animation-iteration-count: 1;
 }
 .entrance .child--2, .dish .child--2, .dessert .child--2 {
-  -webkit-animation: cascadeMenu2 750ms both;
-          animation: cascadeMenu2 750ms both;
+  -webkit-animation: cascadeMenu2 1000ms both 0.1s;
+          animation: cascadeMenu2 1000ms both 0.1s;
   -webkit-animation-iteration-count: 1;
           animation-iteration-count: 1;
 }
 .entrance .child--3, .dish .child--3, .dessert .child--3 {
-  -webkit-animation: cascadeMenu3 1000ms both;
-          animation: cascadeMenu3 1000ms both;
+  -webkit-animation: cascadeMenu3 1250ms both 0.2s;
+          animation: cascadeMenu3 1250ms both 0.2s;
   -webkit-animation-iteration-count: 1;
           animation-iteration-count: 1;
 }
 .entrance .child--4, .dish .child--4, .dessert .child--4 {
-  -webkit-animation: cascadeMenu4 1250ms both;
-          animation: cascadeMenu4 1250ms both;
+  -webkit-animation: cascadeMenu4 1500ms both 0.3s;
+          animation: cascadeMenu4 1500ms both 0.3s;
   -webkit-animation-iteration-count: 1;
           animation-iteration-count: 1;
 }
@@ -814,7 +881,7 @@ header .fa-arrow-left {
   color: transparent;
   font-size: 22px;
   font-weight: bold;
-  padding: 25px;
+  padding: 25px 15px 0px 15px;
 }
 .entrance .card-meal:hover, .dish .card-meal:hover, .dessert .card-meal:hover {
   cursor: pointer;
